--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Welcome to My Portfolio</h1>
-  <script src="index.js"></script>
+  <script id="root"></script>
 </body>
 </html>
