--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>My Portfolio</title>
 </head>
 <body>
-  <h1>Welcome to My Portfolio</h1>
-  <script id="root"></script>
+  <div id="root"></div>
 </body>
 </html>
+
